{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 16,
  "lineage": "b643491c-28eb-e67b-9fb8-bbe2f1b7e3b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudknowledge-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0df6aecf630c177",
            "association_id": "eipassoc-0998aa2764b3ae759",
            "domain": "vpc",
            "id": "eipalloc-0a0df6aecf630c177",
            "instance": "i-0627ca6a10cf48703",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a964dadda8985c8c",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-50-19-206-111.compute-1.amazonaws.com",
            "public_ip": "50.19.206.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cloudknowledgeinstance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudknowledgeinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:359587168453:instance/i-0627ca6a10cf48703",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0627ca6a10cf48703",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudknowledgekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a964dadda8985c8c",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe86a6b60b44514e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001be46a175f118e8",
            "tags": {
              "Name": "Cloudknowledge"
            },
            "tags_all": {
              "Name": "Cloudknowledge"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c810ffa898f467e"
            ]
          },
          "dependencies": [
            "aws_security_group.cloudknowledgesg",
            "aws_subnet.public-subnet",
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudknowledge-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359587168453:internet-gateway/igw-0b9c93b3123ac4622",
            "id": "igw-0b9c93b3123ac4622",
            "owner_id": "359587168453",
            "tags": {
              "Name": "cloudknowledge-igw"
            },
            "tags_all": {
              "Name": "cloudknowledge-igw"
            },
            "vpc_id": "vpc-038a16805e483bd71"
          },
          "dependencies": [
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359587168453:route-table/rtb-0fd43e3164d5c885b",
            "id": "rtb-0fd43e3164d5c885b",
            "owner_id": "359587168453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9c93b3123ac4622",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a16805e483bd71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudknowledge-igw",
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d74d76ed6c8b30a9",
            "route_table_id": "rtb-0fd43e3164d5c885b",
            "subnet_id": "subnet-001be46a175f118e8"
          },
          "dependencies": [
            "aws_internet_gateway.cloudknowledge-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudknowledgesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359587168453:security-group/sg-05c810ffa898f467e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c810ffa898f467e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloudknowledgesg",
            "name_prefix": "",
            "owner_id": "359587168453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudknowledge-sg"
            },
            "tags_all": {
              "Name": "cloudknowledge-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a16805e483bd71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359587168453:subnet/subnet-0f15368bee209abb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f15368bee209abb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359587168453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-038a16805e483bd71"
          },
          "dependencies": [
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359587168453:subnet/subnet-001be46a175f118e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001be46a175f118e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359587168453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-038a16805e483bd71"
          },
          "dependencies": [
            "aws_vpc.cloudknowledgevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudknowledgevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359587168453:vpc/vpc-038a16805e483bd71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005a27fb04ad5affd",
            "default_route_table_id": "rtb-05892fdff5f505979",
            "default_security_group_id": "sg-086c6aacf6d7597c2",
            "dhcp_options_id": "dopt-087ebf3d5935299f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-038a16805e483bd71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05892fdff5f505979",
            "owner_id": "359587168453",
            "tags": {
              "Name": "cloudknowledgevpc"
            },
            "tags_all": {
              "Name": "cloudknowledgevpc"
            }
          }
        }
      ]
    }
  ]
}